--- a/HW-6/index.html
+++ b/HW-6/index.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-  <!--  <script type="module" src="task-01.js"></script> -->
-  <!-- <script type="module" src="task-02.js"></script> -->
-  <!--  <script type="module" src="task-03.js"></script> -->
-  <!-- <script type="module" src="task-04.js"></script> -->
-  <!-- <script type="module" src="task-05.js"></script> -->
-  <!-- <script type="module" src="task-06.js"></script> -->
-  <!-- <script type="module" src="task-07.js"></script> -->
-  <!--  <script type="module" src="task-08.js"></script> -->
-  <!-- <script type="module" src="task-09.js"></script> -->
+  <script type="module" src="task-01.js"></script>
+  <script type="module" src="task-02.js"></script>
+  <script type="module" src="task-03.js"></script>
+  <script type="module" src="task-04.js"></script>
+  <script type="module" src="task-05.js"></script>
+  <script type="module" src="task-06.js"></script>
+  <script type="module" src="task-07.js"></script>
+  <script type="module" src="task-08.js"></script>
+  <script type="module" src="task-09.js"></script>
   <script type="module" src="task-10.js"></script>
 </body>
 
